tests/baselines/reference/parserIndexSignature11.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature11.ts (3 errors) ====
    interface I {
            [p];
             ~
!!! error TS1022: An index signature parameter must have a type annotation.
            [p1: string];
            ~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
            [p2: string, p3: number];
             ~~
!!! error TS1096: An index signature must have exactly one parameter.
    }